@@ -27,6 +27,7 @@ Bugs fixed
 - Bug 2007 - uan: Remove deprecation on SetRxThresholdDb
 - Bug 2450 - LogDistancePropagationLossModel is not continuous
 - Bug 2492 - uan: Make use of RxGain attribute in UanPhyGen class
+- Bug 2511 - HT Greenfield is not working
 
 Known issues
 ------------
